# codex-cli-voice-android

./: .env.example  .gitignore  AGENTS.md  AGENT_BUILD_CCVA.md  AUDIO_SHIM.md  AUDIO_SHIM_HALF_DUPLEX_PLAN.md  AUDIO_SHIM_SUPPLEMENTAL_PLAN.md  BUILD.md  DEPLOY.md  LICENSE  README.md  TROUBLESHOOTING.md  VOICE_MODES.md  build.sh  install.sh
android-aec-shim/: settings.gradle.kts
patches/: 001-android-cargo-config.patch  002-workspace-android-fixes.patch  003-termux-open-url.patch  004-v8-android-stubs.patch  005-sentry-rustls.patch  006-lmstudio-workspace-reqwest.patch  007-android-file-locks.patch  008-android-rmcp-reqwest-no-platform-verifier.patch  008-cargo-lock-rust-v0.125.0.patch  008-cargo-lock-rust-v0.133.0.patch  009-android-aec-shim-audio.patch  009-android-core-recursion-limit.patch  010-cargo-lock-rust-v0.134.0.patch  010-cargo-lock-rust-v0.135.0.patch  010-cargo-lock-rust-v0.136.0.patch  010-cargo-lock-rust-v0.137.0.patch  010-cargo-lock-rust-v0.139.0.patch  010-cargo-lock-rust-v0.142.2.patch  010-cargo-lock-rust-v0.144.0.patch  010-cargo-lock-rust-v0.144.1.patch  011-android-termux-clipboard.patch
releases/: stable.json  v0.133.0-android.1.json  v0.134.0-ccva.1.json  v0.135.0-ccva.1.json  v0.144.1-ccva.1.json  v0.144.1-ccva.2.json
scripts/: android_code_mode_guard.sh  android_permission_snapshot.sh  android_runtime_snapshot.sh  android_tls_guard.sh  autotest_termux_stts_skill.py  autotest_termux_tts_stt_skill.py  autotest_text_voice_kokoro.py  ccva-realtime-stop  (+25 more)
support/codex-realtime-adapter/: Cargo.toml
support/codex-realtime-adapter/src/: main.rs
(+91 files in other folders)
